--- a/exercice8.html
+++ b/exercice8.html
@@ -5,9 +5,9 @@
         <meta charset="UTF-8">
     </head>
     <body>
-        <form name="form">
+        <form>
             <label for="age">Votre âge : </label><input type="text" id="age" name="age"/><br/>
-            <button id="valider" name="valider" onClick="controle(form)">Valider</button>
+            <button id="valider" name="valider" onClick="display()">Valider</button>
         </form>
     </body>
     <script src="exercice8.js">
